// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview(as Form) snapshot 1`] = `
<div
  class="pdfme-designer-root"
  style="position: relative; background: rgb(74, 74, 74); width: 1200px; height: 1200px;"
>
  <div
    class="pdfme-designer-background"
    style="margin: 0px auto; width: 1200px; height: 1200px;"
  >
    <div
      style="position: absolute; top: auto; bottom: 6%; width: 1200px; display: flex; justify-content: center; box-sizing: border-box; padding: 0px 8px; pointer-events: none;"
    >
      <div
        class="pdfme-ui-control-bar"
        style="display: inline-flex; align-items: center; justify-content: center; position: relative; z-index: 1; min-height: 40px; max-width: 100%; box-sizing: border-box; padding: 4px 12px; column-gap: 8px; row-gap: 4px; flex-wrap: wrap; border-radius: 6px; background-color: rgba(0, 0, 0, 0.45); pointer-events: auto;"
      >
        <div
          class="pdfme-ui-zoom"
          style="min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap; row-gap: 0px;"
          >
            <span
              style="display: inline-flex;"
            >
              <button
                aria-label="Zoom out"
                class="pdfme-ui-zoom-out"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 0px; cursor: pointer; font-size: 14px; line-height: 1; border-radius: 6px; height: 32px; padding: 0px; box-sizing: border-box; transition: all 0.1s; opacity: 1; user-select: none; white-space: nowrap; background: transparent; border: 1px solid transparent; color: rgba(0, 0, 0, 0.88); width: 32px; min-width: 32px;"
                title="Zoom out"
                type="button"
              >
                <span>
                  Minus
                </span>
              </button>
            </span>
            <span
              class="pdfme-ui-zoom-label"
              style="color: rgb(255, 255, 255); font-weight: 600; font-size: 14px; margin: 8px; min-width: 44px; text-align: center; white-space: nowrap;"
            >
              100
              %
            </span>
            <span
              style="display: inline-flex;"
            >
              <button
                aria-label="Zoom in"
                class="pdfme-ui-zoom-in"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 0px; cursor: pointer; font-size: 14px; line-height: 1; border-radius: 6px; height: 32px; padding: 0px; box-sizing: border-box; transition: all 0.1s; opacity: 1; user-select: none; white-space: nowrap; background: transparent; border: 1px solid transparent; color: rgba(0, 0, 0, 0.88); width: 32px; min-width: 32px;"
                title="Zoom in"
                type="button"
              >
                <span>
                  Plus
                </span>
              </button>
            </span>
            <div
              style="width: 1px; height: 24px; margin: 0px 6px; background-color: rgb(255, 255, 255); opacity: 0.45;"
            />
            <span
              style="display: inline-flex;"
            >
              <button
                aria-label="Fit width"
                class="pdfme-ui-fit-width"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 0px; cursor: pointer; font-size: 14px; line-height: 1; border-radius: 6px; height: 32px; padding: 0px; box-sizing: border-box; transition: all 0.1s; opacity: 1; user-select: none; white-space: nowrap; background: transparent; border: 1px solid transparent; color: rgba(0, 0, 0, 0.88); width: 32px; min-width: 32px;"
                title="Fit width"
                type="button"
              >
                <span>
                  MoveHorizontal
                </span>
              </button>
            </span>
            <span
              style="display: inline-flex;"
            >
              <button
                aria-label="Fit height"
                class="pdfme-ui-fit-height"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 0px; cursor: pointer; font-size: 14px; line-height: 1; border-radius: 6px; height: 32px; padding: 0px; box-sizing: border-box; transition: all 0.1s; opacity: 1; user-select: none; white-space: nowrap; background: transparent; border: 1px solid transparent; color: rgba(0, 0, 0, 0.88); width: 32px; min-width: 32px;"
                title="Fit height"
                type="button"
              >
                <span>
                  MoveVertical
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style="width: 1200px; height: 1200px; position: relative; overflow: auto;"
    >
      <div
        style="transform: scale(1); transform-origin: top left; height: 1px; width: 1px;"
      >
        <div
          style="font-family: "Roboto"; top: 20px; left: 203.14960629450002px; position: relative; background-image: url("data:image/png;base64,a..."); background-size: 793.700787411px 1122.5196850527px; width: 793.700787411px; height: 1122.5196850527px;"
        >
          <div>
            <div
              class="selectable"
              id="1"
              style="position: absolute; cursor: pointer; height: 56.692913386499995px; width: 377.95275591px; top: 75.590551182px; left: 75.590551182px; transform: rotate(0deg); opacity: 1; outline: 1px dashed #38a0ff;"
              title="field1"
            >
              <div
                style="height: 100%; width: 100%;"
              >
                <div
                  style="padding: 0px; resize: none; background-color: transparent; border: medium; display: flex; flex-direction: column; justify-content: flex-start; width: 100%; height: 100%; cursor: text;"
                >
                  <div
                    id="text-1"
                    style="font-family: inherit; color: rgb(0, 0, 0); font-size: 30pt; letter-spacing: 0pt; line-height: 1em; text-align: left; white-space: pre-wrap; word-break: break-word; resize: none; border: medium; outline: none; margin-bottom: 0px; padding-top: 3.436640625px; background-color: transparent; height: 100%;"
                    tabindex="100"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="selectable"
              id="2"
              style="position: absolute; cursor: pointer; height: 151.181102364px; width: 377.95275591px; top: 132.2834645685px; left: 75.590551182px; transform: rotate(0deg); opacity: 1; outline: 1px dashed #38a0ff;"
              title="field2"
            >
              <div
                style="height: 100%; width: 100%;"
              >
                <div
                  style="width: 100%; height: 100%; background-image: none; background-size: contain; background-repeat: no-repeat; background-position: center center;"
                >
                  <img
                    src="field2"
                    style="height: 100%; width: 100%; border-radius: 0px; object-fit: contain;"
                  />
                  <button
                    style="position: absolute; top: 0px; left: 0px; z-index: 1; display: flex; justify-content: center; align-items: center; color: rgb(51, 51, 51); background: rgb(242, 242, 242); border-radius: 2px; border: 1px solid rgb(118, 118, 118); cursor: pointer; height: 24px; width: 24px;"
                  >
                    x
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview(as Viewer) snapshot 1`] = `
<div
  class="pdfme-designer-root"
  style="position: relative; background: rgb(74, 74, 74); width: 1200px; height: 1200px;"
>
  <div
    class="pdfme-designer-background"
    style="margin: 0px auto; width: 1200px; height: 1200px;"
  >
    <div
      style="position: absolute; top: auto; bottom: 6%; width: 1200px; display: flex; justify-content: center; box-sizing: border-box; padding: 0px 8px; pointer-events: none;"
    >
      <div
        class="pdfme-ui-control-bar"
        style="display: inline-flex; align-items: center; justify-content: center; position: relative; z-index: 1; min-height: 40px; max-width: 100%; box-sizing: border-box; padding: 4px 12px; column-gap: 8px; row-gap: 4px; flex-wrap: wrap; border-radius: 6px; background-color: rgba(0, 0, 0, 0.45); pointer-events: auto;"
      >
        <div
          class="pdfme-ui-zoom"
          style="min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap; row-gap: 0px;"
          >
            <span
              style="display: inline-flex;"
            >
              <button
                aria-label="Zoom out"
                class="pdfme-ui-zoom-out"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 0px; cursor: pointer; font-size: 14px; line-height: 1; border-radius: 6px; height: 32px; padding: 0px; box-sizing: border-box; transition: all 0.1s; opacity: 1; user-select: none; white-space: nowrap; background: transparent; border: 1px solid transparent; color: rgba(0, 0, 0, 0.88); width: 32px; min-width: 32px;"
                title="Zoom out"
                type="button"
              >
                <span>
                  Minus
                </span>
              </button>
            </span>
            <span
              class="pdfme-ui-zoom-label"
              style="color: rgb(255, 255, 255); font-weight: 600; font-size: 14px; margin: 8px; min-width: 44px; text-align: center; white-space: nowrap;"
            >
              100
              %
            </span>
            <span
              style="display: inline-flex;"
            >
              <button
                aria-label="Zoom in"
                class="pdfme-ui-zoom-in"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 0px; cursor: pointer; font-size: 14px; line-height: 1; border-radius: 6px; height: 32px; padding: 0px; box-sizing: border-box; transition: all 0.1s; opacity: 1; user-select: none; white-space: nowrap; background: transparent; border: 1px solid transparent; color: rgba(0, 0, 0, 0.88); width: 32px; min-width: 32px;"
                title="Zoom in"
                type="button"
              >
                <span>
                  Plus
                </span>
              </button>
            </span>
            <div
              style="width: 1px; height: 24px; margin: 0px 6px; background-color: rgb(255, 255, 255); opacity: 0.45;"
            />
            <span
              style="display: inline-flex;"
            >
              <button
                aria-label="Fit width"
                class="pdfme-ui-fit-width"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 0px; cursor: pointer; font-size: 14px; line-height: 1; border-radius: 6px; height: 32px; padding: 0px; box-sizing: border-box; transition: all 0.1s; opacity: 1; user-select: none; white-space: nowrap; background: transparent; border: 1px solid transparent; color: rgba(0, 0, 0, 0.88); width: 32px; min-width: 32px;"
                title="Fit width"
                type="button"
              >
                <span>
                  MoveHorizontal
                </span>
              </button>
            </span>
            <span
              style="display: inline-flex;"
            >
              <button
                aria-label="Fit height"
                class="pdfme-ui-fit-height"
                style="display: inline-flex; align-items: center; justify-content: center; gap: 0px; cursor: pointer; font-size: 14px; line-height: 1; border-radius: 6px; height: 32px; padding: 0px; box-sizing: border-box; transition: all 0.1s; opacity: 1; user-select: none; white-space: nowrap; background: transparent; border: 1px solid transparent; color: rgba(0, 0, 0, 0.88); width: 32px; min-width: 32px;"
                title="Fit height"
                type="button"
              >
                <span>
                  MoveVertical
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style="width: 1200px; height: 1200px; position: relative; overflow: auto;"
    >
      <div
        style="transform: scale(1); transform-origin: top left; height: 1px; width: 1px;"
      >
        <div
          style="font-family: "Roboto"; top: 20px; left: 203.14960629450002px; position: relative; background-image: url("data:image/png;base64,a..."); background-size: 793.700787411px 1122.5196850527px; width: 793.700787411px; height: 1122.5196850527px;"
        >
          <div>
            <div
              class="selectable"
              id="1"
              style="position: absolute; cursor: pointer; height: 56.692913386499995px; width: 377.95275591px; top: 75.590551182px; left: 75.590551182px; transform: rotate(0deg); opacity: 1; outline: transparent;"
              title="field1"
            >
              <div
                style="height: 100%; width: 100%;"
              >
                <div
                  style="padding: 0px; resize: none; background-color: transparent; border: medium; display: flex; flex-direction: column; justify-content: flex-start; width: 100%; height: 100%; cursor: default;"
                >
                  <div
                    id="text-1"
                    style="font-family: inherit; color: rgb(0, 0, 0); font-size: 30pt; letter-spacing: 0pt; line-height: 1em; text-align: left; white-space: pre-wrap; word-break: break-word; resize: none; border: medium; outline: none; margin-bottom: 0px; padding-top: 3.436640625px; background-color: transparent; height: 100%;"
                  >
                    <span
                      style="letter-spacing:inherit;"
                    >
                      f
                    </span>
                    <span
                      style="letter-spacing:inherit;"
                    >
                      i
                    </span>
                    <span
                      style="letter-spacing:inherit;"
                    >
                      e
                    </span>
                    <span
                      style="letter-spacing:inherit;"
                    >
                      l
                    </span>
                    <span
                      style="letter-spacing:inherit;"
                    >
                      d
                    </span>
                    <span
                      style="letter-spacing:0;"
                    >
                      1
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="selectable"
              id="2"
              style="position: absolute; cursor: pointer; height: 151.181102364px; width: 377.95275591px; top: 132.2834645685px; left: 75.590551182px; transform: rotate(0deg); opacity: 1; outline: transparent;"
              title="field2"
            >
              <div
                style="height: 100%; width: 100%;"
              >
                <div
                  style="width: 100%; height: 100%; background-image: none; background-size: contain; background-repeat: no-repeat; background-position: center center;"
                >
                  <img
                    src="field2"
                    style="height: 100%; width: 100%; border-radius: 0px; object-fit: contain;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
